fixed btn and description alignment.

--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -22,7 +22,7 @@ html{
 }
 
 #formControlLg{
-  color: #0d6efd;
+  color: white;
   font-weight: bold;
 }
 
